Examples/error_array.lang
func main() {
	x := 2;
	x[3] = 4; // error
}
